[tool.poetry]
name = "icq bot"
version = "0.1.0"
description = "Bot for starting autotests and send run's results to ICQ chats"
authors = ["iluckycat <andriei.voronin.2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mailru-im-bot = "^0.0.21"
pytest = "^7.4.0"
pytest-html = "^3.2.0"
junitxml = "^0.7"
pytest-json-report = "^1.5.0"
schedule = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
